--- a/src/main/resources/lang_zh_CN.properties
+++ b/src/main/resources/lang_zh_CN.properties
@@ -156,7 +156,7 @@ selectAddTypeLabel=\u8BF7\u9009\u62E9\u53D1\u5E03\u7C7B\u578B
 cityBroadcastLabel=\u540C\u57CE\u5E7F\u64AD
 err500Label=\u8BF7\u5230<a href="https://hacpai.com/article/1438049659432">\u8FD9\u91CC</a>\u53CD\u9988\u95EE\u9898\u4EE5\u5E2E\u52A9\u6211\u4EEC\u8FDB\u884C\u6539\u8FDB\uFF0C\u975E\u5E38\u611F\u8C22 &hearts;
 latestLabel=\u6700\u65B0
-backToHacPaiLabel=\u8FD4\u56DE\u9ED1\u5BA2\u6D3E
+backToHacPaiLabel=\u8FD4\u56DE\u8D35\u5DDEIT
 moreRecentArticleLabel=\u66F4\u591A\u65B0\u5E16\u5B50
 sameCityLabel=\u540C\u57CE
 cityArticlesTipLabel=\u516C\u5F00\u81EA\u5DF1\u7684\u4F4D\u7F6E\u540E\u624D\u80FD\u67E5\u770B\u540C\u57CE\u5E16\u5B50
@@ -210,7 +210,7 @@ downLabel=\u53CD\u5BF9
 IHaveAQuestionLabel=\u63D0\u95EE
 chargePointContentLabel=<h3>\u5145\u503C\u79EF\u5206</h3><img src="https://img.hacpai.com/alipay-donate.png"><ul>\
 <li>\u901A\u8FC7\u5411\u652F\u4ED8\u5B9D\u8D26\u53F7 <b>b3log_donate@126.com</b> \u6216\u7528\u652F\u4ED8\u5B9D\u94B1\u5305\u626B\u63CF\u4E0A\u65B9\u4E8C\u7EF4\u7801\u8FDB\u884C\u8F6C\u8D26</li>\
-<li>\u8F6C\u8D26\u65F6\u8BF7\u5728\u5907\u6CE8\u91CC\u586B\u5199\u4F60\u7684\u9ED1\u5BA2\u6D3E\u7528\u6237\u540D</li>\
+<li>\u8F6C\u8D26\u65F6\u8BF7\u5728\u5907\u6CE8\u91CC\u586B\u5199\u4F60\u7684\u793E\u533A\u7528\u6237\u540D</li>\
 <li>\u5982\u679C\u4F60\u5FD8\u8BB0\u586B\u5199\u7528\u6237\u540D\uFF08\u626B\u7801\u8F6C\u8D26\u53EF\u80FD\u65E0\u6CD5\u8F93\u5165\u5907\u6CE8\uFF09\uFF0C\u53EF\u4EE5<a href="${servePath}/post?type=1&tags=\u79EF\u5206\u5145\u503C&at=88250">\u70B9\u6B64\u53D1\u5E16</a>\uFF1A\
     <ul>\
         <li>\u5728\u5185\u5BB9\u4E2D <code>@88250</code></li>\
