--- a/src/main/resources/lang_zh_CN.properties
+++ b/src/main/resources/lang_zh_CN.properties
@@ -74,7 +74,7 @@ selfNicknameLabel=\u652F\u6301\u4E2D\u6587\uFF0C\u76EE\u524D\u4EC5\u7528\u4E8E\u
 clearLabel=\u6E05\u7A7A
 characterLabel=\u5B57
 communityGroupLabel=\u793E\u7FA4
-communityDynamicSubLabel=&nbsp;\u6B22\u8FCE\u52A0\u5165\u8D35\u5DDEIT\u7CBE\u82F1\u603B\u7FA4(qq)\uFF1A87750788
+communityDynamicSubLabel=&nbsp;\u6B22\u8FCE\u52A0\u5165Venus\u603B\u7FA4(qq)\uFF1A87750788
 communityDynamicLabel=\u793E\u7FA4\u52A8\u6001
 sourceLabel=\u6E90
 noRevisionLabel=\u5185\u5BB9\u6CA1\u6709\u53D1\u751F\u8FC7\u4EFB\u4F55\u6539\u53D8
@@ -156,7 +156,7 @@ selectAddTypeLabel=\u8BF7\u9009\u62E9\u53D1\u5E03\u7C7B\u578B
 cityBroadcastLabel=\u540C\u57CE\u5E7F\u64AD
 err500Label=\u8BF7\u5230<a href="https://hacpai.com/article/1438049659432">\u8FD9\u91CC</a>\u53CD\u9988\u95EE\u9898\u4EE5\u5E2E\u52A9\u6211\u4EEC\u8FDB\u884C\u6539\u8FDB\uFF0C\u975E\u5E38\u611F\u8C22 &hearts;
 latestLabel=\u6700\u65B0
-backToHacPaiLabel=\u8FD4\u56DE\u8D35\u5DDEIT
+backToHacPaiLabel=\u8FD4\u56DEVenus\u793E\u533A
 moreRecentArticleLabel=\u66F4\u591A\u65B0\u5E16\u5B50
 sameCityLabel=\u540C\u57CE
 cityArticlesTipLabel=\u516C\u5F00\u81EA\u5DF1\u7684\u4F4D\u7F6E\u540E\u624D\u80FD\u67E5\u770B\u540C\u57CE\u5E16\u5B50
@@ -403,18 +403,16 @@ avatarTypeLabel=\u5934\u50CF\u7C7B\u578B
 avatarURLLabel=\u5934\u50CF\u5730\u5740 
 numVIPLabel=\u53F7\u4F1A\u5458
 userIntroLabel=\u4E2A\u6027\u7B7E\u540D
-symDescriptionLabel=\u9ED1\u5BA2\u6D3E\u662F\u7A0B\u5E8F\u5458\u548C\u8BBE\u8BA1\u5E08\u7684\u805A\u96C6\u5730\uFF0C\u6C47\u805A\u4E86\u6765\u81EA\u7A0B\u5E8F\u6280\u672F\u9886\u57DF\u7684\u5DE5\u7A0B\u5E08\u548C\u5BCC\u6709\u521B\u610F\u7684\u8BBE\u8BA1\u5E08
+symDescriptionLabel=Venus\u793E\u533A\u662F\u5F00\u6E90\u6846\u67B6Venus\u7684\u7EBF\u4E0A\u4EA4\u6D41\u533A\uFF0C\u5C3D\u91CF\u79D2\u56DE
 symAnnouncementLabel=\u516C\u544A
-introLabel=<p>\u8FD9\u91CC\u662F\u8D35\u5DDE\u672C\u571FIT\u7EBF\u4E0A\u4EA4\u6D41\u793E\u533A\uFF0C\u6C47\u805A\u4E86\u6765\u81EA\u5357\u660E\u533A\u3001\u767D\u4E91\u533A\u3001\u4E91\u5CA9\u533A\u8FD8\u6709\u5927\u8425\u5761\u7684\u540E\u7AEF\u3001\u524D\u7AEF\u3001UI\u3001\u5927\u6570\u636E\u3001\u80CC\u7BFC\u3001\u653B\u57CE\u5E08\u7B49\u7B49\u5404\u8DEF\u8C6A\u6770\u3002</p>\
-<p>\u5927\u5BB6\u5728\u8FD9\u91CC\u4EE5\u4E92\u76F8\u6316\u82E6\uFF0C\u6DF1\u523B\u81EA\u5632\u7684\u4EF7\u503C\u89C2\u5206\u4EAB\u81EA\u5DF1\u7684\u725B\u903C\u89C1\u89E3\uFF0C\u5728\u5C55\u793A\u81EA\u5DF1\u7684\u540C\u65F6\uFF0C\u4E5F\u627E\u5230\u4E86\u4E0E\u81EA\u5DF1\u540C\u6D41\u5408\u6C61\u7684\u4F19\u4F34\uFF0C\u5171\u540C\u6316\u5899\u811A\uFF0C\u4E00\u8D77\u6DA8\u5DE5\u8D44\u3002</p>\
-<p>\u4F60\u5728\u8FD9\u91CC\u9ED8\u9ED8\u7684\u704C\u6C34\uFF0C\u6211\u5728\u540E\u53F0\u4E3A\u4F60\u65E0\u79C1\u7684\u5220\u5E16\uFF0C\u4F60\u6CE8\u4E0D\u6CE8\u518C\uFF0CTa\u90FD\u5728\u8FD9\u91CC\uFF01</p>
+introLabel=<p>\u8FD9\u91CC\u662FVenus\u793E\u533A\uFF0C\u4F60\u6CE8\u4E0D\u6CE8\u518C\uFF0CTa\u90FD\u5728\u8FD9\u91CC\uFF01</p>
 creatorLabel=\u521B\u5EFA\u8005
 contributorLabel=\u8D21\u732E\u8005
 referenceLabel=\u5F15\u7528
 coldTagsLabel=\u51B7\u95E8\u6807\u7B7E
 trendTagsLabel=\u70ED\u95E8\u6807\u7B7E
-symphonyLabel=\u8D35\u5DDEIT
-visionLabel=\u8D35\u5DDEIT
+symphonyLabel=Venus\u793E\u533A
+visionLabel=Venus\u793E\u533A
 submitLabel=\u63D0\u4EA4
 relativeArticleLabel=\u76F8\u5173\u5E16\u5B50
 joinTimeLabel=\u52A0\u5165\u65F6\u95F4
@@ -604,10 +602,10 @@ activityCharacterRecognizeFailedLabel=\u5C0F\u8587\u8BF4\u8FD9\u4E2A\u5B57\u4E0D
 activityCharacterRecognizeSuccLabel=\u5C0F\u8587\u5DF2\u7ECF\u770B\u61C2\u4F60\u5199\u7684\u5B57\u4E86\uFF0C\u68D2\u68D2\u54D2~
 activityCharacterNotCharacterLabel=\u4F60\u5DF2\u7ECF\u5199\u5B8C\u4E86\u6240\u6709\u5E38\u7528\u6C49\u5B57\uFF0C\u4F60\u662F\u600E\u4E48\u505A\u5230\u7684\uFF1F
 # Verifycode
-verifycodeEmailSubjectLabel=\u8D35\u5DDEIT\u793E\u533A\u9A8C\u8BC1\u7801
+verifycodeEmailSubjectLabel=Venus\u793E\u533A\u9A8C\u8BC1\u7801
 
 # Timeline
-timelineNewUserLabel=\u6B22\u8FCE\u65B0\u4F1A\u5458 {user} \u52A0\u5165\u8D35\u5DDEIT\u793E\u533A~
+timelineNewUserLabel=\u6B22\u8FCE\u65B0\u4F1A\u5458 {user} \u52A0\u5165Venus\u793E\u533A~
 timelineArticleLabel={user} \u53D1\u5E03\u4E86\u4E00\u7BC7\u5E16\u5B50 {article}
 timelineCommentLabel={user} \u56DE\u590D\u4E86\u5E16\u5B50 {article}\uFF1A{comment}
 timelineActivityCheckinLabel={user} \u53C2\u52A0\u4E86<a href="${servePath}/activities">\u6D3B\u52A8</a> - \u6BCF\u65E5\u7B7E\u5230
